[metadata]
name = loki_api
author = Eugene Kotenko
author_email = eugene.kotenko@yandex.ru
description = Simple Grafana Loki API client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kromany0n/loki_api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
[options.packages.find]
exclude =
    tests
install_requires = 
    pydantic
    python-dotenv
    pytz
    requests
    types-pytz
    types-requests
    types-urllib3
